--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "@cyclic.sh/dynamodb": "^0.0.33",
     "express": "^4.18.2"
   }
 }
